<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGreyBackGround"
    android:id="@+id/detail_background"
    android:transitionName="@string/transition_name_goal_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="185dp">

            <ImageView
                android:id="@+id/header_cover"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@color/colorPrimary" />

            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/header_cover"
                android:layout_alignParentStart="true"
                android:layout_margin="20dp"
                android:paddingBottom="10dp"
                android:paddingEnd="0dp"
                android:paddingStart="20dp"
                android:text="@string/daily_goal"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/edit_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_mode_edit_white_48dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/explanation_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/header_layout"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardCornerRadius="2dp"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/icon_total"
                        android:src="@drawable/away_128"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/total_tv"
                        android:gravity="center_vertical"
                        android:text="@string/total"
                        android:textSize="18sp"
                        android:layout_toEndOf="@id/icon_total"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:paddingEnd="10dp"
                        android:textAlignment="textEnd"
                        android:text="00:00"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp"
                        android:layout_toEndOf="@id/total_tv"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>


    </RelativeLayout>
</ScrollView>